add_executable(server_tests test_server.cpp)
add_dependencies(server_tests ratioNet)
target_link_libraries(server_tests PRIVATE ratioNet)
if(MSVC)
    target_compile_options(server_tests PRIVATE /W4)
else()
    target_compile_options(server_tests PRIVATE -Wall -Wextra -Wpedantic -fsanitize=undefined)
    target_link_options(server_tests PRIVATE -fsanitize=undefined)
    if (ENABLE_COVERAGE)
        if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            target_compile_options(server_tests PRIVATE --coverage)
            target_link_libraries(server_tests PUBLIC gcov)
        endif()
    endif()
endif()

add_executable(client_tests test_client.cpp)
add_dependencies(client_tests ratioNet)
target_link_libraries(client_tests PRIVATE ratioNet)
if(MSVC)
    target_compile_options(client_tests PRIVATE /W4)
else()
    target_compile_options(client_tests PRIVATE -Wall -Wextra -Wpedantic -fsanitize=undefined)
    target_link_options(client_tests PRIVATE -fsanitize=undefined)
    if (ENABLE_COVERAGE)
        if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            target_compile_options(client_tests PRIVATE --coverage)
            target_link_libraries(client_tests PUBLIC gcov)
        endif()
    endif()
endif()

add_test(NAME serverTest00 COMMAND server_tests WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_test(NAME clientTest00 COMMAND client_tests WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})